--- a/file.html
+++ b/file.html
@@ -5,11 +5,10 @@
 <meta charset="UTF-8" />
 <title>文件上传</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <style>
-	#content{
-		/* float: left; */
+	/* #content{
 		margin: auto;
 		margin-left: 100px;
 		margin-top: 20px;
@@ -19,7 +18,7 @@
 		height: 500px;
 		padding-left: 100px;
 	}
-	
+ */	
 	
 </style>
 </head>
@@ -40,25 +39,54 @@
 	        </nav>
 	      </div>
      </div>
-	<div id="content" >
-		<h1 th:inlines="text">文件上传</h1>
-		<form action="http://123.56.193.124//ProjectA/store/fileUpload" method="post" enctype="multipart/form-data" >
-		  <!-- <div class="form-group">
-			<label for="exampleInputEmail1">Email address</label>
-			<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-		  </div>
-		  <div class="form-group">
-			<label for="exampleInputPassword1">Password</label>
-			<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-		  </div> -->
-		  <div class="form-group">
-			<label for="exampleInputFile">File input</label>
-			<input type="file" id="exampleInputFile" name="fileName">
-			<!-- <p class="help-block">Example block-level help text here.</p> -->
-		  </div>
-		 
-		  <button type="submit" class="btn btn-default">提交</button>
-		</form>
+	<br><br>
+	<div class="row" >
+		<div class="col-md-4"></div>
+		<div class="col-md-4">
+			<form id="form1" action="http://123.56.193.124//ProjectA/store/fileUpload" method="post" class="form-horizontal" enctype="multipart/form-data">
+			  <div class="form-group">
+				<!-- <label  style="text-align: left;" for="inputEmail3" class="col-sm-2 control-label">上传文件</label> -->
+				<div class="col-sm-10">
+				   <input class="form-control" type="file" id="exampleInputFile" name="fileName">
+				</div>
+			  </div>
+			  
+			  <div class="form-group">
+				<!-- <label  style="text-align: left;" for="inputPassword3" class=" control-label">类别</label> -->
+				<div class="col-sm-10">
+					<select class="form-control" name="ftype">
+						<option value="经济">经济</option>
+						<option value="机电">机电</option>
+						<option value="法规">法规</option>
+						<option value="管理">管理</option>
+					</select>
+				</div>
+			  </div>
+			  <div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
+				  <button type="submit" onclick="login()" class="btn btn-default">提交</button>
+				</div>
+			  </div>
+			</form>
+		</div>
+		<div class="col-md-4"></div>
 	</div>
+	 <script type="text/javascript">
+	        function login() {
+				// var form = new FormData(document.getElementById("form1"));
+	            $.ajax({
+	            //几个参数需要注意一下
+	                type: "post",//方法类型
+	                // dataType: "json",//预期服务器返回的数据类型
+	                url: "http://123.56.193.124//ProjectA/store/fileUpload" ,//url
+	                data: $('#form1').serialize(),
+					// processData:false,
+					// contentType:false,
+	                success: function (result) {
+	                    console.log(result);//打印服务端返回的数据(调试用)
+	                }
+	            });
+	        }
+	    </script>
 </body>
 </html>
