--- a/index2.html
+++ b/index2.html
@@ -15,13 +15,10 @@
 				font-weight:bold;
 				color:LightCyan;
 			}
-			#redsub tr td{
-				width: 60px;
-				/* color: black; */
-			}
+			
 		</style>
 	</head>
-	<body style="background-color: #B0C4DE;" onload="query(),querysub()">
+	<body style="background-color: #B0C4DE;" onload="query(),queryblue()">
 		
 		<div class="container">
 		
@@ -39,20 +36,27 @@
 		       </nav>
 		     </div>
 		</div>
-		
-		<a href="add.html">AddData</a>
-		<a href="blue.html">Blue</a>
-		<!-- 表格1 -->
-		<br />
-		<label>Red</label>
-		Limit:<input type="text" id="limit" />
-		<button onclick="query()">查询</button>
-		<table id="redball" >
-		</table>
-		<!-- 表格2 -->
-		<br />		<label>RedSub</label>		Limit:<input type="text" id="limit2" />		<button onclick="querysub()">查询</button>		<table id="redsub" >		</table>
-
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+		<div class="row" >
+			<div class="col-md-7">
+				<!-- 表格1 -->
+				<br />
+				<label>Red</label>
+				Limit:<input type="text" id="limit" />
+				<button onclick="query()">查询</button>
+				<table id="redball" >
+				</table>
+			</div>
+			
+			<div class="col-md-5">
+				<br />
+				<label>Blue</label>
+				Limit:<input type="text" id="limitblue" />
+				<button onclick="queryblue()">查询</button>
+				<table id="buleball">
+				</table>
+			</div>
+		</div>
+		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 		<script>
 			function query(){
 			 var limit =$("#limit").val();
@@ -116,72 +120,34 @@
 			}
 			
 			
-			//r1 正常数据，r2=r2-r1,r3=r3-r2,r4=r4-r3,r5=r5-r4,r6=r6-r5
-			function querysub(){
-			 var limit =$("#limit2").val();
+			function queryblue(){
+			 var limit =$("#limitblue").val();
 			 if(limit == 0 || limit == null  ){
-				 limit =10;
+				 limit =20;
 			 }
-			 $.ajax({
-			           url:"http://123.56.193.124:80/ProjectA/Interface3",
-			           type:"GET",
-			           data:"limit="+limit,
-			           success:function(data){
-						var parent=eval('(' + data + ')');
-						var str="";
-						for(var i=0;i<parent.length;i++){
-							str+="<tr>";	
-							var sub=parent[i];
-							str+="<td >"+sub[0]+"</td>";
-							str+="<td>"+sub[1]+"</td>";
-							str+="<td>"+sub[2]+"</td>";
-							str+="<td>"+sub[3]+"</td>";
-							str+="<td>"+sub[4]+"</td>";
-							str+="<td>"+sub[5]+"</td>";
-							str+="<td>"+sub[6]+"</td>";
-							// var k=0;
-							// for(var m=1;m<=33;m++){
-							// 	var flag=false;
-							// 	for(var j=0;j<sub.length-1;j++){
-							// 		if(sub[j]==m){
-							// 			flag=true;
-							// 			k++;
-							// 			break;
-							// 		}else{
-							// 			flag=false;
-							// 		}
-							// 	}
-							// 	if(flag==true){
-							// 		switch(k){
-							// 			case 1:
-							// 				str+="<td style=\"color: red;background-color: Ivory;\">"+m+"</td>";
-							// 				break;
-							// 			case 2:
-							// 				str+="<td style=\"color: #FF00FF;background-color: Ivory;\">"+m+"</td>";
-							// 				break;
-							// 			case 3:
-							// 				str+="<td style=\"color: blue;background-color: Ivory;\">"+m+"</td>";
-							// 				break;
-							// 			case 4:
-							// 				str+="<td style=\"color: #008000;background-color: Ivory;\">"+m+"</td>";
-							// 				break;
-							// 			case 5:
-							// 				str+="<td style=\"color: #FF1493;background-color: Ivory;\">"+m+"</td>";
-							// 				break;
-							// 			case 6:
-							// 				str+="<td style=\"color: black;background-color: Ivory;\">"+m+"</td>";
-							// 				break;
-							// 		}
-									
-							// 	}else{
-							// 		str+="<td>"+m+"</td>";
-							// 	}
-							// }
-							str += "</tr>";
-						}
-						$("#redsub").html(str);
-					   }
-			 });
+				$.ajax({
+			          url:"http://123.56.193.124:80/ProjectA/Interface1",
+			          type:"GET",
+			          data:"limit="+limit,
+			          success:function(data){
+									var parent=eval('(' + data + ')');								
+									var str="";
+									for(var i=0;i<parent.length;i++){
+										str+="<tr>";	
+										var sub=parent[i];
+										str+="<td>"+sub[0]+"</td>";
+										for(var m=1;m<=16;m++){
+											if(sub[7]==m){
+												str+="<td style=\"color: blue;\">"+m+"</td>";
+											}else{
+												str+="<td>"+m+"</td>";
+											}
+										}
+										str += "</tr>";
+									}
+									$("#buleball").html(str);
+								   }
+				});
 			}
 		</script>
 	</body>
