--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		       <h3 class="text-muted">Project name</h3>
 		       <nav>
 		         <ul class="nav nav-justified">
-		           <li class="active"><a href="index.html">Home</a></li>
+		           <li class="active"><a href="MineTest/index.html">Home</a></li>
 						<li><a href="line.html">文件列表</a></li>
 						<li><a href="file.html">文件上传</a></li>
 						<li><a href="index2.html">彩票</a></li>
